src/objects/Telephony__c.object
<CustomObject>
    <fields>
        <fullName>Accept_Calls_from_Landline_Phone__c</fullName>
        <label>Accept Calls from Landline Phone?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accept_Calls_from_Mobile__c</fullName>
        <label>Accept Calls from Mobile?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accept_Calls_from_Prepaid_Phone__c</fullName>
        <label>Accept Calls from Prepaid?Phone?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pampers</fullName>
                </value>
                <value>
                    <fullName>NULL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Call Center</label>
        <referenceTo>Call_Center_Inventory__c</referenceTo>
        <relationshipLabel>Telephony</relationshipLabel>
        <relationshipName>Telephony</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Carrier_800_Fixed_Number__c</fullName>
        <label>Carrier 800 Fixed Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_800_Mobile_Number__c</fullName>
        <label>Carrier 800 Mobile Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_800_Payphone_Number__c</fullName>
        <label>Carrier 800 Payphone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_Comments__c</fullName>
        <label>Carrier Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Carrier_Contact_Information__c</fullName>
        <label>Carrier Contact Information</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <label>Carrier</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Us Brand</label>
        <referenceTo>Contact_Us_Brand__c</referenceTo>
        <relationshipLabel>Telephony</relationshipLabel>
        <relationshipName>Telephony</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_Has_1_Phone_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this if the country uses the same phone number for all brands. Note, do not check if country uses the same phone number for multiple brands but not all</inlineHelpText>
        <label>Country Has 1 Phone Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia-Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Dominican Republic</fullName>
                </value>
                <value>
                    <fullName>Ecuador</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>El Salvador</fullName>
                </value>
                <value>
                    <fullName>Estonia</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DNIS__c</fullName>
        <label>DNIS</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCR_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GCR Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Telephony</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ITFS_Number__c</fullName>
        <label>ITFS Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ITFS_Status__c</fullName>
        <label>ITFS Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
                <value>
                    <fullName>Crisis</fullName>
                </value>
                <value>
                    <fullName>Divested</fullName>
                </value>
                <value>
                    <fullName>Spare</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intermediary_DID__c</fullName>
        <label>Intermediary DID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Albanian</fullName>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Armenian</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Chinese-T</fullName>
                </value>
                <value>
                    <fullName>Croatian</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>English-GB</fullName>
                </value>
                <value>
                    <fullName>English-US</fullName>
                </value>
                <value>
                    <fullName>Estonian</fullName>
                </value>
                <value>
                    <fullName>Farsi</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>Flemish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Hebrew</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Hungarian</fullName>
                </value>
                <value>
                    <fullName>Indonesian</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Kazakh</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Latvian</fullName>
                </value>
                <value>
                    <fullName>Lithuanian</fullName>
                </value>
                <value>
                    <fullName>Malay</fullName>
                </value>
                <value>
                    <fullName>Maltese</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LocalOperationalHours__c</fullName>
        <label>Local Operational Hours</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Pack__c</fullName>
        <label>On Pack</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_1_Label__c</fullName>
        <label>Phone 1 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_1__c</fullName>
        <label>Phone 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_2_Label__c</fullName>
        <label>Phone 2 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_2__c</fullName>
        <label>Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_3_Label__c</fullName>
        <label>Phone 3 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_3__c</fullName>
        <label>Phone 3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_Charge_Type__c</fullName>
        <label>Phone Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Free</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Toll</fullName>
                </value>
                <value>
                    <fullName>Toll-Free</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Colour__c</fullName>
        <formula>Case(Phone_Charge_Type__c,
&quot;Free&quot;,&quot;#78b41e&quot;,
&quot;Local&quot;,&quot;#91919b&quot;,
&quot;Premium&quot;,&quot;#a50f78&quot;,
&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone Colour</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AAI</fullName>
                </value>
                <value>
                    <fullName>CEEMEA</fullName>
                </value>
                <value>
                    <fullName>GC</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NEA</fullName>
                </value>
                <value>
                    <fullName>WE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Telephony_Name__c</fullName>
        <label>Telephony Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Telephony_for_Multiple_Brands__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Use this if country uses the same telephony for multiple brands but not all</inlineHelpText>
        <label>Telephony for Multiple Brands</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Termination_Number_DID__c</fullName>
        <label>Termination Number (DID)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Visible_to_contact_us_pages__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visible to Contact Us Pages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isLabelNotVisibleCareHub__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Label Not Visible to Care Hub</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>localBrand__c</fullName>
        <label>Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Telephony</label>
    <listViews>
        <fullName>AAI</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Call_Center__c</columns>
        <columns>ITFS_Number__c</columns>
        <columns>localBrand__c</columns>
        <columns>LocalOperationalHours__c</columns>
        <columns>Telephony_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>AAI</value>
        </filters>
        <label>AAI</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>Telephony_Name__c</columns>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>localBrand__c</columns>
        <columns>Contact_Us_Brand__c</columns>
        <columns>LocalOperationalHours__c</columns>
        <columns>Visible_to_contact_us_pages__c</columns>
        <columns>Country_Has_1_Phone_Number__c</columns>
        <columns>Call_Center__c</columns>
        <columns>Region__c</columns>
        <columns>ITFS_Number__c</columns>
        <columns>Termination_Number_DID__c</columns>
        <columns>ITFS_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CEEMEA_Numbers</fullName>
        <columns>Country__c</columns>
        <columns>Contact_Us_Brand__c</columns>
        <columns>ITFS_Number__c</columns>
        <columns>Termination_Number_DID__c</columns>
        <columns>ITFS_Status__c</columns>
        <columns>Carrier__c</columns>
        <columns>NAME</columns>
        <columns>Visible_to_contact_us_pages__c</columns>
        <columns>Accept_Calls_from_Landline_Phone__c</columns>
        <columns>Accept_Calls_from_Mobile__c</columns>
        <columns>Accept_Calls_from_Prepaid_Phone__c</columns>
        <columns>On_Pack__c</columns>
        <columns>Telephony_for_Multiple_Brands__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>CEEMEA</value>
        </filters>
        <label>CEEMEA Numbers</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Japan</fullName>
        <columns>NAME</columns>
        <columns>Accept_Calls_from_Landline_Phone__c</columns>
        <columns>Accept_Calls_from_Mobile__c</columns>
        <columns>Brand__c</columns>
        <columns>Carrier__c</columns>
        <columns>Carrier_Contact_Information__c</columns>
        <columns>Country__c</columns>
        <columns>GCR_Contact__c</columns>
        <columns>ITFS_Number__c</columns>
        <columns>ITFS_Status__c</columns>
        <columns>Language__c</columns>
        <columns>LocalOperationalHours__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Japan</value>
        </filters>
        <filters>
            <field>Language__c</field>
            <operation>equals</operation>
            <value>Japanese</value>
        </filters>
        <label>Japan</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Korea</fullName>
        <columns>NAME</columns>
        <columns>Accept_Calls_from_Landline_Phone__c</columns>
        <columns>Accept_Calls_from_Mobile__c</columns>
        <columns>Brand__c</columns>
        <columns>Call_Center__c</columns>
        <columns>Carrier__c</columns>
        <columns>Country__c</columns>
        <columns>GCR_Contact__c</columns>
        <columns>ITFS_Number__c</columns>
        <columns>ITFS_Status__c</columns>
        <columns>localBrand__c</columns>
        <columns>Language__c</columns>
        <columns>LocalOperationalHours__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Korea</value>
        </filters>
        <filters>
            <field>Language__c</field>
            <operation>equals</operation>
            <value>Korean</value>
        </filters>
        <label>Korea</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Korea1</fullName>
        <columns>NAME</columns>
        <columns>Accept_Calls_from_Landline_Phone__c</columns>
        <columns>Accept_Calls_from_Mobile__c</columns>
        <columns>Brand__c</columns>
        <columns>Carrier__c</columns>
        <columns>Contact_Us_Brand__c</columns>
        <columns>Country__c</columns>
        <columns>GCR_Contact__c</columns>
        <columns>ITFS_Number__c</columns>
        <columns>ITFS_Status__c</columns>
        <columns>localBrand__c</columns>
        <columns>Language__c</columns>
        <columns>LocalOperationalHours__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Korea</value>
        </filters>
        <filters>
            <field>Language__c</field>
            <operation>equals</operation>
            <value>Korean</value>
        </filters>
        <label>Korea</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Korea2</fullName>
        <columns>NAME</columns>
        <columns>Accept_Calls_from_Landline_Phone__c</columns>
        <columns>Accept_Calls_from_Mobile__c</columns>
        <columns>Brand__c</columns>
        <columns>Call_Center__c</columns>
        <columns>Carrier__c</columns>
        <columns>Carrier_Contact_Information__c</columns>
        <columns>Contact_Us_Brand__c</columns>
        <columns>Country__c</columns>
        <columns>ITFS_Number__c</columns>
        <columns>ITFS_Status__c</columns>
        <columns>localBrand__c</columns>
        <columns>Language__c</columns>
        <columns>LocalOperationalHours__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Korea</value>
        </filters>
        <filters>
            <field>Language__c</field>
            <operation>equals</operation>
            <value>Korean</value>
        </filters>
        <filters>
            <field>Call_Center__c</field>
            <operation>equals</operation>
            <value>Transcosmos korea</value>
        </filters>
        <label>Korea</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Korea_Updated</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Contact_Us_Brand__c</columns>
        <columns>Call_Center__c</columns>
        <columns>Carrier__c</columns>
        <columns>Carrier_Contact_Information__c</columns>
        <columns>Country__c</columns>
        <columns>GCR_Contact__c</columns>
        <columns>ITFS_Number__c</columns>
        <columns>ITFS_Status__c</columns>
        <columns>localBrand__c</columns>
        <columns>Language__c</columns>
        <columns>LocalOperationalHours__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Call_Center__c</field>
            <operation>equals</operation>
            <value>TRANSCOSMOS KOREA</value>
        </filters>
        <filters>
            <field>LocalOperationalHours__c</field>
            <operation>equals</operation>
            <value>평일 오전 9시 ~ 오후 6시 (공휴일/점심시간 오후 12시~1시 제외)</value>
        </filters>
        <filters>
            <field>Language__c</field>
            <operation>equals</operation>
            <value>Korean</value>
        </filters>
        <filters>
            <field>GCR_Contact__c</field>
            <operation>equals</operation>
            <value>HaKyung Yang</value>
        </filters>
        <filters>
            <field>localBrand__c</field>
            <operation>equals</operation>
            <value>소비자 상담실</value>
        </filters>
        <label>Korea Updated</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>LA_Numbers</fullName>
        <columns>NAME</columns>
        <columns>Telephony_Name__c</columns>
        <columns>Call_Center__c</columns>
        <columns>Country__c</columns>
        <columns>ITFS_Status__c</columns>
        <columns>ITFS_Number__c</columns>
        <columns>Termination_Number_DID__c</columns>
        <columns>Contact_Us_Brand__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Country_Has_1_Phone_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>contains</operation>
            <value>LA</value>
        </filters>
        <label>LA Numbers</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Public_Facing</fullName>
        <columns>NAME</columns>
        <columns>Contact_Us_Brand__c</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>localBrand__c</columns>
        <columns>ITFS_Number__c</columns>
        <columns>Termination_Number_DID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Visible_to_contact_us_pages__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Public Facing</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>USA</fullName>
        <columns>NAME</columns>
        <columns>Accept_Calls_from_Landline_Phone__c</columns>
        <columns>Accept_Calls_from_Mobile__c</columns>
        <columns>Brand__c</columns>
        <columns>Carrier__c</columns>
        <columns>Carrier_Contact_Information__c</columns>
        <columns>Country__c</columns>
        <columns>GCR_Contact__c</columns>
        <columns>ITFS_Number__c</columns>
        <columns>ITFS_Status__c</columns>
        <columns>Language__c</columns>
        <columns>LocalOperationalHours__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>United States of America</value>
        </filters>
        <filters>
            <field>Language__c</field>
            <operation>equals</operation>
            <value>English-US</value>
        </filters>
        <filters>
            <field>ITFS_Number__c</field>
            <operation>contains</operation>
            <value>879</value>
        </filters>
        <label>USA</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>WE_Numbers</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>Country__c</columns>
        <columns>Contact_Us_Brand__c</columns>
        <columns>ITFS_Number__c</columns>
        <columns>Termination_Number_DID__c</columns>
        <columns>ITFS_Status__c</columns>
        <columns>Carrier__c</columns>
        <columns>NAME</columns>
        <columns>Visible_to_contact_us_pages__c</columns>
        <columns>Accept_Calls_from_Landline_Phone__c</columns>
        <columns>Accept_Calls_from_Mobile__c</columns>
        <columns>Accept_Calls_from_Prepaid_Phone__c</columns>
        <columns>On_Pack__c</columns>
        <columns>Telephony_for_Multiple_Brands__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>WE</value>
        </filters>
        <label>WE Numbers</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Tel-{00000}</displayFormat>
        <label>Telephony Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Telephony</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_set_Country_has_1_number</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    !ISBLANK(Contact_Us_Brand__c),
    AND(
         Country_Has_1_Phone_Number__c == true
    )

)</errorConditionFormula>
        <errorMessage>Country Has 1 Phone Number cannot be checked if Contact Us Brand is filled</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Empty_Brand</fullName>
        <active>true</active>
        <description>Fires when telephony is saved with no brand value</description>
        <errorConditionFormula>AND(   
       ISBLANK(Contact_Us_Brand__c),

       AND(Country_Has_1_Phone_Number__c=FALSE,Telephony_for_Multiple_Brands__c=FALSE) 
       
   )</errorConditionFormula>
        <errorMessage>Contact Us Brand cannot be blank if Country Has 1 Phone Number is not checked</errorMessage>
    </validationRules>
</CustomObject>